Stop layout shifts on toggle

--- a/example/src/styles/example.module.css
+++ b/example/src/styles/example.module.css
@@ -1,8 +1,7 @@
 .main {
   display: flex;
   flex-direction: column;
-  width: 100vw;
-  height: 100vh;
+  height: 110vh;
   justify-content: center;
   align-items: center;
 }
